[gd_scene load_steps=4 format=3 uid="uid://tbjbssxuhwu5"]

[ext_resource type="Script" path="res://Core/minion.gd" id="1_6s4tj"]
[ext_resource type="Texture2D" uid="uid://b8rps4m8r6dua" path="res://Art/Cards/TODO.png" id="1_m4vl4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phqvy"]
size = Vector2(198, 199)

[node name="Minion" type="Node2D"]
script = ExtResource("1_6s4tj")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(200, 250)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(0.46625, 0.143252, 4.81308e-08, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="SpriteContainer" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SpriteContainer"]
layout_mode = 2
texture = ExtResource("1_m4vl4")

[node name="DescriptionContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/DescriptionContainer"]
custom_minimum_size = Vector2(190, 75)
layout_mode = 2
size_flags_horizontal = 0
text = "Deals 2 damage to the lowest hp player"
autowrap_mode = 3

[node name="HealthContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_top = 5

[node name="HealthLabel" type="RichTextLabel" parent="Control/MarginContainer/VBoxContainer/HealthContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.891291, 2.71939e-06, 5.77569e-07, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]10[/center]"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(100, 101.5)
shape = SubResource("RectangleShape2D_phqvy")
